--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node ./src"
+    "start": "ts-node ./src",
+    "watch": "nodemon -exec \"yarn start\" "
   },
   "dependencies": {
     "discord.js": "^12.5.1",
@@ -12,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^14.14.20",
     "dotenv": "^8.2.0",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
   }
 }
