--- a/package.json
+++ b/package.json
@@ -4,15 +4,27 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node ./src",
-    "watch": "nodemon -exec \"yarn start\" "
+    "watch": "nodemon -exec \"yarn start\" ",
+    "lint": "eslint . --ext .ts --quiet --cache --cache-location \".eslintcache/\""
   },
   "dependencies": {
     "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
-    "dotenv": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "codecov": "3.1.0",
+    "css-loader": "^2.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^6.3.1",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
   }
