--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "typescript": "^4.1.3"
+    "node-opus": "^0.3.3",
+    "opusscript": "^0.0.7",
+    "typescript": "^4.1.3",
+    "youtube-api": "^3.0.1",
+    "ytdl-core": "^4.4.5",
+    "ytdl-core-discord": "^1.2.5"
   },
   "devDependencies": {
+    "@discordjs/opus": "^0.3.3",
     "@types/node": "^14.14.20",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "codecov": "3.1.0",
-    "css-loader": "^2.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^6.3.1",
     "eslint-import-resolver-typescript": "^2.3.0",
