--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "node-opus": "^0.3.3",
     "opusscript": "^0.0.7",
+    "simple-youtube-api": "^5.2.1",
     "typescript": "^4.1.3",
     "youtube-api": "^3.0.1",
     "ytdl-core": "^4.4.5",
