Adding build command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "ts-node ./src",
     "watch": "nodemon -exec \"yarn start\" ",
-    "lint": "eslint . --ext .ts --quiet --cache --cache-location \".eslintcache/\""
+    "lint": "eslint . --ext .ts --quiet --cache --cache-location \".eslintcache/\"",
+    "build": "tsc --build tsconfig.json"
   },
   "dependencies": {
     "discord.js": "^12.5.1",
