--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "module": "CommonJS",
       "allowSyntheticDefaultImports": true,
       "esModuleInterop": true,
+      "outDir": "build"
     },
     "exclude": [
       "node_modules",
