--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,27 +4,20 @@
 name: build
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
+  # push:
+  #   branches: [ main ]
 
 jobs:
   build:
-
+    name: Build
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [15.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+    - uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: "15.x"
     - run: yarn install
     - run: yarn lint
     - run: yarn build
