--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ts-node ./src",
     "watch": "nodemon -exec \"yarn start\" ",
     "lint": "eslint . --ext .ts --quiet --cache --cache-location \".eslintcache/\"",
-    "build": "tsc --build tsconfig.json"
+    "build": "tsc --build tsconfig.json",
+    "release": "semantic-release"
   },
   "dependencies": {
     "discord.js": "^12.5.1",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@discordjs/opus": "^0.3.3",
+    "@semantic-release/git": "^9.0.0",
     "@types/node": "^14.14.20",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
@@ -29,6 +31,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "nodemon": "^2.0.7",
+    "semantic-release": "^17.3.7",
     "ts-node": "^9.1.1"
   }
 }
