--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czar",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "license": "MIT",
   "scripts": {
     "start": "ts-node ./src",
