--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,8 @@ jobs:
           node-version: "15.x"
       - run: yarn install
       - run: yarn build
-      - run: yarn release
+      - name: Use release token ${{ secrets.GH_TOKEN }}
+        run: yarn release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
