--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,7 @@ jobs:
           node-version: "15.x"
       - run: yarn install
       - run: yarn build
-      - name: Use release token ${{ secrets.GH_TOKEN }}
-        run: yarn release
+      - run: yarn release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
