--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: "15.x"
       - run: yarn install
       - run: yarn build
-      - run: yarn release
+      - run: npx semantic-release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
