--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,12 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses:  actions/setup-node@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+      - uses: actions/setup-node@v2
         with:
           node-version: "15.x"
       - run: yarn install
       - run: yarn build
       - run: npx semantic-release
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        # env:
           # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
