--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,12 +11,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.GH_TOKEN }}
+        persist-credentials: false
       - uses: actions/setup-node@v2
         with:
           node-version: "15.x"
       - run: yarn install
       - run: yarn build
-      - run: npx semantic-release
-        # env:
-          # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: yarn release
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
