--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,11 @@
 name: release
 
 on:
-  merge:
+  push:
     branches: [ main ]
+    paths-ignore:
+    - 'README.md'
+    - 'CHANGELOG.md'
 
 jobs:
   release:
@@ -16,7 +19,11 @@ jobs:
         with:
           node-version: "15.x"
       - run: yarn install
-      - run: yarn build
+      - uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
       - run: yarn release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
