--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,14 +3,12 @@ name: release
 on:
   push:
     branches: [ main ]
-    paths-ignore:
-    - 'README.md'
-    - 'CHANGELOG.md'
 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    if: "!contains(github.event.commits[0].message, '[skip ci]')"
     steps:
       - uses: actions/checkout@v2
         with:
