--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,10 @@ jobs:
       with:
         node-version: "15.x"
     - run: yarn install
+    - uses: actions/cache@v2
+      with:
+        path: |
+          **/node_modules
+        key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
     - run: yarn lint
     - run: yarn build
