--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,6 +4,8 @@ LABEL Jan Guzman <janfrancisco19@gmail.com>
 WORKDIR /app
 COPY . /app
 
+RUN apk add --update --no-cache build-base make python3 && ln -sf python3 /usr/bin/python
+RUN pip3 install --no-cache --upgrade pip setuptools
 RUN yarn install
 
 CMD yarn start
