feat: semantic release github support

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,7 +9,14 @@
                 "npmPublish": false
             }
         ],
-        "@semantic-release/git"
+        "@semantic-release/git",
+        [
+            "@semantic-release/github",
+            {
+                "failComment": false,
+                "failTitle": false
+            }
+        ]
     ],
     "branches": [
         "main"
