--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,8 +12,22 @@ jobs:
     name: Publish
     runs-on: Ubuntu-20.04
     steps:
-      - name: Get the version
+      - name: Extract version tag
         id: get_version
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
-      - name: Echo
-        run: echo ${{ steps.get_version.outputs.VERSION }}
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile.prod
+          push: true
+          tags: |
+            krystian19/czar:latest
+            krystian19/czar:${{ steps.get_version.outputs.VERSION }}
