--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-typescript": "^6.3.1",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
     "semantic-release": "^17.3.7",
     "ts-node": "^9.1.1"
   }
