--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,7 +5,11 @@ COPY . /app
 
 RUN apk add --update --no-cache build-base make python3 && ln -sf python3 /usr/bin/python
 RUN pip3 install --no-cache --upgrade pip setuptools
+
+RUN yarn install --production
+RUN cp -R node_modules node_modules_production
 RUN yarn install
+
 RUN yarn build
 
 FROM node:15.5.1-alpine3.11
@@ -15,6 +19,6 @@ ENV NODE_ENV="production"
 
 WORKDIR /app
 COPY --from=builder /app/build /app/build
-COPY --from=builder /app/node_modules /app/node_modules
+COPY --from=builder /app/node_modules_production /app/node_modules
 
 CMD node build
