--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "node-opus": "^0.3.3",
     "opusscript": "^0.0.7",
     "simple-youtube-api": "^5.2.1",
-    "typescript": "^4.1.3",
     "ytdl-core": "^4.4.5",
     "ytdl-core-discord": "^1.2.5"
   },
   "devDependencies": {
-    "@discordjs/opus": "^0.4.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@types/node": "^14.14.20",
@@ -38,6 +36,7 @@
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "semantic-release": "^17.3.7",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
