--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: release
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   release:
@@ -15,7 +15,7 @@ jobs:
           persist-credentials: false
       - uses: actions/setup-node@v2
         with:
-          node-version: "15.x"
+          node-version: '15.x'
       - uses: actions/cache@v2
         with:
           path: |
@@ -24,6 +24,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install
-      - run: yarn release
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - run: yarn build
+      # - run: yarn release
+      #   env:
+      #     GH_TOKEN: ${{ secrets.GH_TOKEN }}
